--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -24,7 +24,7 @@
     </div>
     <hr />
     <div id="mirrored">
-        {{ mirrored_content }}
+        {{ mirrored_content|safe }}
     </div>
 
 </body>
