Flesh out about

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -18,9 +18,16 @@
     <div id="mirror_info">
         <ul>
             <li>
-                Original URL: {{ original_url }}
+                Original URL: <a href="{{ original_url }}">{{ original_url }}</a>
             </li>
         </ul>
+        <p>
+            <a href="/">About GitHub Wiki SEE</a>
+        </p>
+        <p>
+            Hastily scraped and under-processed HTML below.
+        </p>
+
     </div>
     <hr />
     <div id="mirrored">
