Images don't blow their containers

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -11,6 +11,7 @@
             margin: auto;
         }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body id="main">
