--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -11,9 +11,11 @@
             margin: auto;
         }
         img {
-            max-width: 38rem;
+            max-width: 100%;
+            height: auto;
         }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body id="main">
