Use m for mirror

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -26,13 +26,13 @@
         for normal usage. The content of the tool is not meant to be read by users.</p>
     <h2>Usage</h2>
     <ol>
-        <li>Go to this site at <code>/mirror/{account name}/{repo}/wiki</code> and get a link.</li>
+        <li>Go to this site at <code>/m/{account name}/{repo}/wiki</code> and get a link.</li>
         <li>For best results, place the link in a location that can be indexed by search engines.</li>
     </ol>
     <h2>Examples</h2>
     <ul>
-        <li><a href="/mirror/nelsonjchen/github-wiki-test/wiki">nelsonjchen/github-wiki-test</a></li>
-        <li><a href="/mirror/commaai/openpilot/wiki">commaai/openpilot</a></li>
+        <li><a href="/m/nelsonjchen/github-wiki-test/wiki">nelsonjchen/github-wiki-test</a></li>
+        <li><a href="/m/commaai/openpilot/wiki">commaai/openpilot</a></li>
     </ul>
 
     <h2>Project, Source, and other information</h2>
