front page update

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -19,7 +19,8 @@
     <h1>GitHub Wiki SEE</h1>
     <p>
         <em>GitHub Wiki Search Engine Enablement </em> allows GitHub Wikis to be indexed by search engines. There's no
-        <code>robots.txt</code> on this site and text content served from this domain should be indexed.
+        <code>robots.txt</code> on this site and text content mirrored from GitHub and served from
+        this domain are indexed.
     </p>
     <p>
         Currently, <a href=https://github.com/isaacs/github/issues/1683>GitHub prevents crawling of repository's Wiki
