--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -24,7 +24,7 @@
     </p>
     <p>
         Currently, <a href=https://github.com/isaacs/github/issues/1683>GitHub prevents crawling of repository's Wiki
-        pages. This means Wikis are invisible to Google and other search engines such as DuckDuckGo.</a> and can be
+        pages. This means Wikis are invisible to Google and other search engines such as DuckDuckGo</a> and can be
         a very unpleasant surprise if you're looking to share knowledge or put a FAQ on a Wiki!
     </p>
     <p>
