--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -39,6 +39,10 @@
     <ol>
         <li>Go to this site at <code>/m/{account name}/{repo}/wiki</code> and get a link.</li>
         <li>For best results, place the link in a location that can be indexed by search engines.</li>
+        <ul>
+            <li>In an issue.</li>
+            <li>The bottom of a README.</li>
+        </ul>
     </ol>
     <h2>Examples</h2>
     <ul>
