Hide useless elements in transclusion

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -14,6 +14,25 @@
             max-width: 100%;
             height: auto;
         }
+        /* Hide useless-parts of transcluded HTML */
+        .width-full.input-group {
+            display: none;
+        }
+        h5:nth-last-child(2) {
+            display: none;
+        }
+        .Box-row.wiki-more-pages-link {
+            display: none;
+        }
+        .filter-bar {
+            display: none;
+        }
+        .Box-title > .octicon {
+            display: none;
+        }
+        .anchor {
+            display: none;
+        }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
