--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -20,7 +20,7 @@
     <p>
         <em>GitHub Wiki Search Engine Enablement </em> allows GitHub Wikis to be indexed by search engines. There's no
         <code>robots.txt</code> on this site and text content mirrored from GitHub and served from
-        this domain are indexed.
+        this domain will be crawled and indexed.
     </p>
     <p>
         Currently, <a href=https://github.com/isaacs/github/issues/1683>GitHub prevents crawling of repository's Wiki
@@ -29,7 +29,8 @@
     </p>
     <p>
         SEE simply mirrors the rendered contents of the pages and has a link at the top to visit the page on GitHub
-        for normal usage. The content of the tool is not meant to be read by users and is meant for crawlers.
+        for normal usage. The content of the tool is not meant to be read by users and is meant for crawlers. It is
+        intended to behave like those StackOverflow content mirroring sites. 
     </p>
     <p>
         As an alternative to this hack, you may want to consider GitHub Pages backed by a public repository for your
@@ -50,7 +51,7 @@
         <li><a href="/m/commaai/openpilot/wiki">commaai/openpilot</a></li>
     </ul>
 
-    <h2>Project, Source, and other information</h2>
+    <h2>Project, Source, issues, and other information</h2>
 
     <a href="https://github.com/nelsonjchen/github-wiki-see-rs">https://github.com/nelsonjchen/github-wiki-see-rs</a>
 
