Make original URL stickied

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -14,6 +14,12 @@
             max-width: 100%;
             height: auto;
         }
+        #mirror_info {
+            position: sticky;
+            top: 0;
+            padding: 1px;
+            background-color: gainsboro;
+        }
         /* Hide useless-parts of transcluded HTML */
         .width-full.input-group {
             display: none;
