Be agnostic with names

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -24,13 +24,13 @@
     </p>
     <p>
         Currently, <a href=https://github.com/isaacs/github/issues/1683>GitHub prevents crawling of repository's Wiki
-        pages. This means Wikis are invisible to Google and other search engines such as DuckDuckGo</a> and can be
-        a very unpleasant surprise if you're looking to share knowledge or put a FAQ on a Wiki!
+        pages. This means Wikis are invisible to search engines such as Google and DuckDuckGo</a> and can be
+        a very unpleasant surprise if you're looking to share searchable knowledge or put a FAQ on a Wiki!
     </p>
     <p>
         SEE simply mirrors the rendered contents of the pages and has a link at the top to visit the page on GitHub
         for normal usage. The content of the tool is not meant to be read by users and is meant for crawlers. It is
-        intended to behave like those StackOverflow content mirroring sites. 
+        intended to behave like those StackOverflow content mirroring sites.
     </p>
     <p>
         As an alternative to this hack, you may want to consider GitHub Pages backed by a public repository for your
