Mention sitemap repo

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -24,7 +24,7 @@
     </p>
     <p>
         Currently, <a href=https://github.com/isaacs/github/issues/1683>GitHub prevents crawling of repository's Wiki
-        pages. This means Wikis are invisible to search engines such as Google and DuckDuckGo</a> and can be
+            pages. This means Wikis are invisible to search engines such as Google and DuckDuckGo</a> and can be
         a very unpleasant surprise if you're looking to share searchable knowledge or put a FAQ on a Wiki!
     </p>
     <p>
@@ -43,6 +43,9 @@
         <ul>
             <li>In an issue.</li>
             <li>The bottom of a README.</li>
+            <li>You can also add it to the sitemap at the
+                <a href=https://github.com/nelsonjchen/github-wiki-see-rs-sitemaps>sitemap repo</a>.
+            </li>
         </ul>
     </ol>
     <h2>Examples</h2>
