Handle overflow on pre elements

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -45,6 +45,9 @@
         .anchor {
             display: none;
         }
+        pre {
+            overflow: auto;
+        }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
