--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -10,7 +10,6 @@
             padding: 2rem;
             margin: auto;
         }
-
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -18,19 +17,20 @@
 <body id="main">
     <h1>GitHub Wiki SEE</h1>
     <p>
-        <em>GitHub Wiki Search Engine Enablement </em> allows GitHub Wikis to be indexed by search engines. There's no
-        <code>robots.txt</code> on this site and text content mirrored from GitHub and served from
-        this domain will be crawled and indexed.
+        <em>GitHub Wiki Search Engine Enablement</em> allows GitHub Wikis to be indexed by search engines. There's no
+        <code>robots.txt</code> on this site preventing indexing of wiki content
+        and wiki content proxied from GitHub and served from this domain will be crawled and indexed.
     </p>
     <p>
         Currently, <a href=https://github.com/isaacs/github/issues/1683>GitHub prevents crawling of repository's Wiki
-            pages. This means Wikis are invisible to search engines such as Google and DuckDuckGo</a> and can be
+            pages</a>. This means Wikis are invisible to search engines such as Google and DuckDuckGo and can be
         a very unpleasant surprise if you're looking to share searchable knowledge or put a FAQ on a Wiki!
     </p>
     <p>
-        SEE simply mirrors the rendered contents of the pages and has a link at the top to visit the page on GitHub
-        for normal usage. The content of the tool is not meant to be read by users and is meant for crawlers. It is
-        intended to behave like those StackOverflow content mirroring sites.
+        SEE simply proxies the rendered contents of the pages and has a link at the top to visit the page on GitHub
+        for normal usage and a link at the bottom explaining what SEE is.
+        The content of this service is not meant to be read by users and is meant for crawlers. It is
+        intended to behave like those StackOverflow content mirroring sites but with far less ad-farming.
     </p>
     <p>
         As an alternative to this hack, you may want to consider GitHub Pages backed by a public repository for your
@@ -43,18 +43,19 @@
         <ul>
             <li>In an issue.</li>
             <li>The bottom of a README.</li>
-            <li>You can also add it to the sitemap at the
-                <a href=https://github.com/nelsonjchen/github-wiki-see-rs-sitemaps>sitemap repo</a>.
-            </li>
         </ul>
     </ol>
+    <p>You can also just edit your page periodically and the
+        <a href=https://github.com/nelsonjchen/github-wiki-see-rs-sitemaps>sitemap generator</a>
+        will eventually pick it up!
+    </p>
     <h2>Examples</h2>
     <ul>
         <li><a href="/m/nelsonjchen/github-wiki-test/wiki">nelsonjchen/github-wiki-test</a></li>
         <li><a href="/m/commaai/openpilot/wiki">commaai/openpilot</a></li>
     </ul>
 
-    <h2>Project, Source, issues, and other information</h2>
+    <h2>Project, Source, Issues, and other information</h2>
 
     <a href="https://github.com/nelsonjchen/github-wiki-see-rs">https://github.com/nelsonjchen/github-wiki-see-rs</a>
 
