--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -27,14 +27,14 @@
         a very unpleasant surprise if you're looking to share searchable knowledge or put a FAQ on a Wiki!
     </p>
     <p>
-        GWSEE simply proxies the rendered contents of the pages and has a link at the top to visit the page on GitHub
-        for normal usage and a link at the bottom explaining what GWSEE is.
+        GHWSEE simply proxies the rendered contents of the pages and has a link at the top to visit the page on GitHub
+        for normal usage and a link at the bottom explaining what GHWSEE is.
         The content of this service is not meant to be read by users and is meant for crawlers. It is
         intended to behave like those StackOverflow content mirroring sites but with far less ad-farming.
     </p>
     <p>
-        As an alternative to this hack, you may want to consider GitHub Pages backed by a public repository for your
-        community content.
+        If you are a GitHub Wiki maintainer, you may want to consider GitHub Pages backed by a public repository for
+        your community's content as a more stable and blessed alternative.
     </p>
     <h2>Usage</h2>
     <ol>
@@ -47,11 +47,11 @@
     </ol>
     <p>You can also just edit your page periodically and the
         <a href=https://github.com/nelsonjchen/github-wiki-see-rs-sitemaps>sitemap generator</a>
-        will eventually pick it up!
+        will eventually pick it up and notify search engines!
     </p>
 
     <p>Note that it may take quite some time for content to be picked up.</p>
-    
+
     <h2>Examples</h2>
     <ul>
         <li><a href="/m/nelsonjchen/github-wiki-test/wiki">nelsonjchen/github-wiki-test</a></li>
