Add img src rewrites

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -56,6 +56,7 @@
     <ul>
         <li><a href="/m/nelsonjchen/github-wiki-test/wiki">nelsonjchen/github-wiki-test</a></li>
         <li><a href="/m/commaai/openpilot/wiki">commaai/openpilot</a></li>
+        <li><a href="/m/Erithano/Timon-Your-FAQ-bot-for-Microsoft-Teams/wiki">Erithano/Timon-Your-FAQ-bot-for-Microsoft-Teams</a></li>
     </ul>
 
     <h2>Project, Source, Issues, and other information</h2>
