--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -48,6 +48,9 @@
         pre {
             overflow: auto;
         }
+        a.Link--muted {
+            display: none;
+        }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
