Be more mobile friendly

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -10,46 +10,61 @@
             padding: 2rem;
             margin: auto;
         }
+
         img {
             max-width: 100%;
             height: auto;
         }
+
         #mirror_info {
             position: sticky;
             top: 0;
             padding: 10px;
             background-color: gainsboro;
         }
+
         #footer_info {
             position: sticky;
             bottom: 0;
             padding: 10px;
             background-color: gainsboro;
         }
+
         /* Hide useless-parts of transcluded HTML */
         .width-full.input-group {
             display: none;
         }
+
         h5:nth-last-child(2) {
             display: none;
         }
+
         .Box-row.wiki-more-pages-link {
             display: none;
         }
+
         .filter-bar {
             display: none;
         }
-        .Box-title > .octicon {
+
+        .Box-title>.octicon {
             display: none;
         }
+
         .anchor {
             display: none;
         }
+
         pre {
             overflow: auto;
         }
+
         a.Link--muted {
             display: none;
+        }
+
+        #main {
+            word-wrap: break-word;
         }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
