tweak page counter

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -66,6 +66,12 @@
         #main {
             word-wrap: break-word;
         }
+
+        .Counter {
+            background-color: lightgray;
+            border-radius: 20px;
+            padding: 0 10px;
+        }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
