--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -18,7 +18,7 @@
     <h1>GitHub Wiki SEE</h1>
     <p>
         <em>GitHub Wiki Search Engine Enablement</em> allows GitHub Wikis to be indexed by search engines. There's no
-        <code>robots.txt</code> on this site preventing indexing of wiki content
+        <a href="/robots.txt"><code>robots.txt</code></a> on this site preventing indexing of wiki content
         and wiki content proxied from GitHub and served from this domain will be crawled and indexed.
     </p>
     <p>
@@ -50,7 +50,7 @@
         will eventually pick it up and notify search engines!
     </p>
 
-    <p>Note that it may take quite some time for content to be picked up.</p>
+    <p>Note that it may take quite some time for content to be picked up with no guarantee it'll be picked up.</p>
 
     <h2>Examples</h2>
     <ul>
