--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -72,6 +72,13 @@
             border-radius: 20px;
             padding: 0 10px;
         }
+
+        .markdown-body table {
+            max-width: 100%;
+            overflow: auto;
+            width: 100%;
+            display: block;
+        }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
