--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -93,7 +93,8 @@
         {{ mirrored_content|safe }}
     </div>
     <div id="footer_info">
-        <a href="/">About GitHub Wiki SEE, a crawler enabler for GitHub Wikis</a>
+        <p><a href="/">About GitHub Wiki SEE, a crawler enabler for GitHub Wikis</a></p>
+        <p>Content for crawlers. <a href="{{ original_url }}">Original URL</a> for human beings.</p>
     </div>
 </body>
 
