Warn that the content is for crawlers and that URLs aren't rewritten correctly.
Try to stem off https://github.com/ArrowElectronics/AnalogMAX/issues/3

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -90,7 +90,7 @@
     </div>
     <div id="footer_info">
         <p><a href="/">About GitHub Wiki SEE, a crawler enabler for GitHub Wikis</a></p>
-        <p>Content for crawlers. <a href="{{ original_url }}">Original URL</a> for human beings.</p>
+        <p>⚠️ Content is primarily for search engine crawlers. <em>Rewritten URLs on this mirrored page may not work.</em> Please visit the <a href="{{ original_url }}">Original URL</a> for working links!</p>
     </div>
 </body>
 
