Update front page

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -44,22 +44,15 @@
     </p>
     <h2>Usage</h2>
     <ol>
-        <li>Go to this site at <code>/m/{account name}/{repo}/wiki</code> and get a link.</li>
-        <li>For best results, place the link in a location that can be indexed by search engines.</li>
-        <ul>
-            <li>In an issue.</li>
-            <li>The bottom of a README.</li>
-            <li>In a tweet.</li>
-            <li>These activities help establish the authoritativeness of the proxied link and give it a higher ranking.</li>
-        </ul>
+        <li>Use a search engine! That's the intended interface to the content "on" this site.</li>
     </ol>
-    <p>You can also just edit your page periodically and the
+    <p>If you are an editor, edit your page periodically and the
         <a href=https://github.com/nelsonjchen/github-wiki-see-rs-sitemaps>sitemap generator</a>
         will eventually pick it up and notify search engines! However, the search ranking will be affected by how
-        unique your content is and how well it matches the queries.
+        unique your content is and how well it matches the queries. Generally don't expect a high ranking but it'll probably be on page 2 or 3 which is better than the previous alternative of not being there at all!
     </p>
 
-    <p>Note that it may take quite some time for content to be picked up with no guarantee it'll be picked up.</p>
+    <p>Note that it may take quite some time for content to be picked up and there is no guarantee it'll be picked up.</p>
 
     <h2>Examples</h2>
     <p> These are just examples and testing wikis.</p>
