--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -22,7 +22,7 @@
         and wiki content proxied from GitHub and served from this domain will be crawled and indexed.
     </p>
     <p>
-        Currently, <a href=https://github.com/isaacs/github/issues/1683>GitHub prevents crawling of repository's Wiki
+        Currently, <a href=https://github.com/isaacs/github/issues/1683>GitHub prevents crawling of repository Wiki
         pages</a>. This means GitHub Wikis are invisible to search engines such as Google and DuckDuckGo and can be
         a very unpleasant surprise if you're looking to share searchable knowledge or put a FAQ on a Wiki!
     </p>
