--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -107,7 +107,7 @@
         {{ mirrored_content|safe }}
     </div>
     <div id="footer_info">
-        <p><a href="/">About GitHub Wiki SEE, a crawler enabler for GitHub Wikis</a></p>
+        <p><a href="/">About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <strong>GitHub prevents crawling of repository Wiki pages.</strong></a></p>
         <p>⚠️ Content is primarily for search engine crawlers. <em>Rewritten URLs on this mirrored page may not work.</em> Please visit the <a href="{{ original_url }}">Original URL</a> for working links!</p>
     </div>
 </body>
