--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -24,6 +24,9 @@
             animation-name: alert_yellow;
             animation-duration: 2s;
             animation-iteration-count: infinite;
+            border-style: ridge;
+            border-color: lightgrey;
+            border-width: thick;
         }
 
         @keyframes alert_yellow {
@@ -46,6 +49,9 @@
             animation-name: alert_yellow;
             animation-duration: 2s;
             animation-iteration-count: infinite;
+            border-style: ridge;
+            border-color: lightgrey;
+            border-width: thick;
         }
 
         /* Hide useless-parts of transcluded HTML */
