don't display errant toc stuff

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -99,6 +99,10 @@
             width: 100%;
             display: block;
         }
+
+        .js-wiki-sidebar-toc-toggle-chevron-button {
+            display: none;
+        }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
