--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -118,7 +118,7 @@
     </div>
     <div id="footer_info">
         <p><a href="/">About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <strong>GitHub prevents crawling of repository Wiki pages.</strong></a></p>
-        <p>⚠️ Content is primarily for search engine crawlers. <em>Rewritten URLs on this mirrored page may not work.</em> Please visit the <a href="{{ original_url }}">Original URL</a> for working links!</p>
+        <p>⚠️ Content is primarily for search engine crawlers. <em>Rewritten URLs on this mirrored page may not work.</em> Please visit the <a href="{{ original_url }}">Original URL</a> for working links and to view the page as intended!</p>
     </div>
 </body>
 
