--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -31,13 +31,13 @@
 
         @keyframes alert_yellow {
             0% {
-                background-color: yellow;
+                background-color: white;
             }
             50% {
                 background-color: lightyellow;
             }
             100% {
-                background-color: yellow;
+                background-color: white;
             }
         }
 
@@ -103,6 +103,12 @@
         .js-wiki-sidebar-toc-toggle-chevron-button {
             display: none;
         }
+
+        .visit_url_button button {
+            width: 100%;
+            height: 50px;
+            font-size: 30px;
+        }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -111,6 +117,8 @@
     <h1>{{ original_title }}</h1>
     <div id="mirror_info">
         Original URL: <a href="{{ original_url }}">{{ original_url }}</a>
+        <br>
+        <a href="{{ original_url }}" class="visit_url_button"><button>Visit Original URL</button></a>
     </div>
 
     <div id="mirrored">
