Adjust to be visible without flashing. Closes #6

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -20,38 +20,25 @@
             position: sticky;
             top: 0;
             padding: 10px;
-            background-color: yellow;
-            animation-name: alert_yellow;
-            animation-duration: 2s;
-            animation-iteration-count: infinite;
             border-style: ridge;
             border-color: lightgrey;
             border-width: thick;
-        }
-
-        @keyframes alert_yellow {
-            0% {
-                background-color: white;
-            }
-            50% {
-                background-color: lightyellow;
-            }
-            100% {
-                background-color: white;
-            }
+            color:red;
+            font-weight: bold;
+            background-color: honeydew;
+            font-size: large;
         }
 
         #footer_info {
             position: sticky;
             bottom: 0;
             padding: 10px;
-            background-color: yellow;
-            animation-name: alert_yellow;
-            animation-duration: 2s;
-            animation-iteration-count: infinite;
             border-style: ridge;
             border-color: lightgrey;
             border-width: thick;
+            color:red;
+            font-weight: bold;
+            background-color: honeydew;
         }
 
         /* Hide useless-parts of transcluded HTML */
@@ -126,7 +113,7 @@
     </div>
     <div id="footer_info">
         <p><a href="/">About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <strong>GitHub prevents crawling of repository Wiki pages.</strong></a></p>
-        <p>⚠️ Content is primarily for search engine crawlers. <em>Rewritten URLs on this mirrored page may not work.</em> Please visit the <a href="{{ original_url }}">Original URL</a> for working links and to view the page as intended!</p>
+        <p>⚠️ Content here is for search engine crawlers. <em>Rewritten URLs on this mirrored page may not work.</em> Humans should visit the <a href="{{ original_url }}">Original URL</a> for working links and to view the page as intended!</p>
     </div>
 </body>
 
