Extensive Decomissioning https://github.com/github/feedback/discussions/4992\#discussioncomment-1439485

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>
-        GitHub Wiki SEE
+        GitHub Wiki SEE (decomissioned)
     </title>
     <style>
         body {
@@ -15,21 +15,21 @@
 </head>
 
 <body id="main">
-    <h1>GitHub Wiki SEE</h1>
+    <h1>GitHub Wiki SEE (decomissioned)</h1>
     <p>
-        <em>GitHub Wiki Search Engine Enablement</em> allows GitHub Wikis to be indexed by search engines. There's no
-        <a href="/robots.txt"><code>robots.txt</code></a> on this site preventing indexing of wiki content
+        <em>GitHub Wiki Search Engine Enablement</em> previously allowed GitHub Wikis to be indexed by search engines.
+        There was no <a href="/robots.txt"><code>robots.txt</code></a> on this site preventing indexing of wiki content
         and wiki content proxied from GitHub and served from this domain will be crawled and indexed.
     </p>
     <p>
-        Currently, <a href=https://github.com/github/feedback/discussions/4992>GitHub prevents crawling of repository Wiki
-        pages</a>. This means GitHub Wikis are invisible to search engines such as Google and DuckDuckGo and can be
+        Previously, <a href=https://github.com/github/feedback/discussions/4992>GitHub prevented crawling of repository Wiki
+        pages</a>. This means GitHub Wikis are invisible to search engines such as Google and DuckDuckGo and were an
         a very unpleasant surprise if you're looking to share searchable knowledge or put a FAQ on a Wiki!
     </p>
     <p>
-        GHWSEE simply proxies the rendered contents of the pages and has a link at the top to visit the page on GitHub
+        GHWSEE had simply proxied the rendered contents of the pages and has a link at the top to visit the page on GitHub
         for normal usage and a link at the bottom explaining what GHWSEE is.
-        The content of this service is not meant to be read by users and is meant for crawlers. It is
+        The content of this service was not meant to be read by users and was meant for crawlers. It was
         intended to behave like those StackOverflow content mirroring sites but with far less ad-farming.
     </p>
     <p>
@@ -38,24 +38,20 @@
         or to promote mass vandalism of GitHub Wikis. This was likely the original reason for
         the indexing blocking.
     </p>
-    <p>
-        If you are a GitHub Wiki maintainer, you may want to consider GitHub Pages backed by a public repository for
-        your community's content as a more stable, blessed, and probably higher search ranking alternative.
-    </p>
     <h2>Usage</h2>
     <ol>
-        <li>Use a search engine! That's the intended interface to the content "on" this site.</li>
+        <li>Used a search engine! That was the intended interface to the content "on" this site.</li>
     </ol>
-    <p>If you are an editor, edit your page periodically and the
+    <p>If you were an editor, you edited your page periodically and the
         <a href=https://github.com/nelsonjchen/github-wiki-see-rs-sitemaps>sitemap generator</a>
-        will eventually pick it up and notify search engines! However, the search ranking will be affected by how
-        unique your content is and how well it matches the queries. Generally don't expect a high ranking but it'll probably be on page 2 or 3 which is better than the previous alternative of not being there at all!
+        will eventually pick it up and notify search engines! Some stuff ranked pretty high but it wasn't
+        a slam dunk to be "number 1".
     </p>
 
-    <p>Note that it may take quite some time for content to be picked up and there is no guarantee it'll be picked up.</p>
+    <p>Note that it had taken quite some time for content to be picked up and there is no guarantee it'll be picked up.</p>
 
     <h2>Examples</h2>
-    <p> These are just examples and testing wikis.</p>
+    <p> These were examples and testing wikis but they just redirect to GitHub now.</p>
     <ul>
         <li><a href="/m/nelsonjchen/github-wiki-test/wiki">nelsonjchen/github-wiki-test</a></li>
         <li><a href="/m/commaai/openpilot/wiki">commaai/openpilot</a></li>
@@ -63,7 +59,7 @@
     </ul>
 
     <h2>Project, README, Source, Issues, and other information</h2>
-
+    <p>The project was extensively decomissioned but you can look at its Git history.</p>
     <a href="https://github.com/nelsonjchen/github-wiki-see-rs">https://github.com/nelsonjchen/github-wiki-see-rs</a>
 </body>
 
