--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -19,21 +19,21 @@
     <p>
         <em>GitHub Wiki Search Engine Enablement</em> previously allowed GitHub Wikis to be indexed by search engines.
         There was no <a href="/robots.txt"><code>robots.txt</code></a> on this site preventing indexing of wiki content
-        and wiki content proxied from GitHub and served from this domain will be crawled and indexed.
+        and wiki content proxied from GitHub and served from this domain were crawled and indexed.
     </p>
     <p>
         Previously, <a href=https://github.com/github/feedback/discussions/4992>GitHub prevented crawling of repository Wiki
-        pages</a>. This means GitHub Wikis are invisible to search engines such as Google and DuckDuckGo and were an
-        a very unpleasant surprise if you're looking to share searchable knowledge or put a FAQ on a Wiki!
+        pages</a>. This meant GitHub Wikis were invisible to search engines such as Google and DuckDuckGo and this was an
+        a very unpleasant surprise if you were looking to share searchable knowledge or put a FAQ on a Wiki!
     </p>
     <p>
-        GHWSEE had simply proxied the rendered contents of the pages and has a link at the top to visit the page on GitHub
+        GHWSEE had simply proxied the rendered contents of the pages and had a link at the top to visit the page on GitHub
         for normal usage and a link at the bottom explaining what GHWSEE is.
         The content of this service was not meant to be read by users and was meant for crawlers. It was
         intended to behave like those StackOverflow content mirroring sites but with far less ad-farming.
     </p>
     <p>
-        For anti-abuse reasons, all links rendered in the service that are going out of GitHub
+        For anti-abuse reasons, all links rendered in the service that were going out of GitHub
         are tagged with <code>rel="nofollow ugc"</code> as to not affect search engine rankings
         or to promote mass vandalism of GitHub Wikis. This was likely the original reason for
         the indexing blocking.
@@ -44,7 +44,7 @@
     </ol>
     <p>If you were an editor, you edited your page periodically and the
         <a href=https://github.com/nelsonjchen/github-wiki-see-rs-sitemaps>sitemap generator</a>
-        will eventually pick it up and notify search engines! Some stuff ranked pretty high but it wasn't
+        would eventually pick it up and notify search engines! Some stuff ranked pretty high but it wasn't
         a slam dunk to be "number 1".
     </p>
 
