--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -23,7 +23,7 @@
             border-style: ridge;
             border-color: lightgrey;
             border-width: thick;
-            color:red;
+            color: red;
             font-weight: bold;
             background-color: honeydew;
             font-size: large;
@@ -36,7 +36,7 @@
             border-style: ridge;
             border-color: lightgrey;
             border-width: thick;
-            color:red;
+            color: red;
             font-weight: bold;
             background-color: honeydew;
         }
@@ -112,8 +112,11 @@
         {{ mirrored_content|safe }}
     </div>
     <div id="footer_info">
-        <p><a href="/">About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <strong>GitHub prevents crawling of repository Wiki pages.</strong></a></p>
-        <p>⚠️ Content here is for search engine crawlers. <em>Rewritten URLs on this mirrored page may not work.</em> Humans should visit the <a href="{{ original_url }}">Original URL</a> for working links and to view the page as intended!</p>
+        <p><a href="/">About GitHub Wiki SEE, a crawler enabler for GitHub Wikis as <strong>GitHub prevents crawling of
+                    repository Wiki pages.</strong></a></p>
+        <p>⚠️ Content here is for search engine crawlers. <em>Rewritten URLs on this mirrored page may not work.</em>
+            Humans should visit the <a href="{{ original_url }}">Original URL</a> for working links, table of contents
+            and pages, and to view the page as intended!</p>
     </div>
 </body>
 
